--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==1.0
-Jinja2==2.11.3
-Werkzeug==0.15.5
-MarkupSafe>=1.1.1
-itsdangerous==0.24
+Flask
+Jinja2
+Werkzeug
+MarkupSafe
+itsdangerous
 PySide2
